# taruka

./: Makefile.am  TODO  configure.ac
data/: Makefile.mk  taruka_main.eon  taruka_tool_drawing.eon
src/: Makefile.am
src/lib/: Taruka.h  taruka_tool.h
