ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

MAINTAINERCLEANFILES = \
Makefile.in \
aclocal.m4 \
autom4te.cache \
config.guess \
config.sub \
configure \
depcomp \
install-sh \
ltmain.sh \
missing \
efl_svg.pc \
m4/ltsugar.m4 \
m4/libtool.m4 \
m4/ltversion.m4 \
m4/lt~obsolete.m4 \
m4/ltoptions.m4

EXTRA_DIST = \
AUTHORS \
COPYING \
README \
autogen.sh \
m4/efl_compiler.m4
